3470
In scala 2.8 Beta1 prerelease:

{code}
...
<console>:7: error: overloaded method copy needs result type     
         override def copy (j: Int = this.j): B = new B(j)       
                            ^                                    
Exception in thread "main" java.lang.AssertionError: assertion failed: copy$$default$$1
        at scala.tools.nsc.symtab.Symbols$$Symbol.info(Symbols.scala:747)             
        at scala.tools.nsc.symtab.Symbols$$Symbol.initialize(Symbols.scala:867)       
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3731)        
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:4087)        
...
{code}



In scala 2.8, revision 20879:

{code}
Welcome to Scala version 2.8.0.r20879-b20100214020153 (Java HotSpot(TM) Server VM, Java 1.6.0_15).
Type in expressions to have them evaluated.                                                       
Type :help for more information.                                                                  

scala> class A (val i: Int) {
     |   override def toString: String = "A(" + i + ")"
     |   def copy (i: Int = this.i): A = new A(i)      
     | }                                               
defined class A                                        

scala> 

scala> class B (val j: Int) extends A(1) {
     |   override def toString: String = "B(" + i + "," + j + ")"
     |   override def copy (j: Int = this.j): B = new B(j)       
     | }                                                         
<console>:7: error: overloaded method copy needs result type     
         override def copy (j: Int = this.j): B = new B(j)       
                            ^                                    
Exception in thread "main" java.lang.AssertionError: assertion failed: copy$$default$$1
        at scala.tools.nsc.symtab.Symbols$$Symbol.info(Symbols.scala:717)             
        at scala.tools.nsc.symtab.Symbols$$Symbol.initialize(Symbols.scala:843)
...
{code}
